--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
     <div class="navWrapper">
         <nav class="nav">
-            <a href="#proyectos">Proyectos</a>
+            <a href="#proyectos">(proximamente)</a>
             <a href="#AboutMe">Sobre mí</a>
             <a href="#Studies">Estudios</a>
-            <a href="#feedbackForm">Feedback</a>
+            <a href="#feedbackForm">(proximamente)</a>
             <a href="#Contacto">Contacto</a>
             <div class="animation start-home"></div>
         </nav>
