--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
     <header>
         <div class="controls">
-            <label class="toggle-switch">
-              Dark Mode
+            <span class="textDarkMode">Dark mode</span>
+            <label class="toggle-switch">   
               <input type="checkbox" id="dark-mode-toggle">
               <div class="toggle-switch-border">
                 <div class="toggle-switch-dot"></div>
@@ -49,9 +49,7 @@
         </section>
         <section class="aboutMe">
             <h2> <a name="AboutMe"></a> Sobre mí</h2>
-            <p>¡Hola! Gracias por visitar mí portfolio.
-                Me encuentro en la búsqueda de una pasantía o trabajo part-time para poder combinar con mis estudios hasta 08/2023 (fecha en que termino de cursar en la Digital House). 
-                En Febrero 2023 comienzo el ingreso a la Tecnicatura en Programación en la UTN de Avellaneda para complementar y expandir conocimientos, la misma dura 3 años. 
+            <p>¡Hola! Gracias por visitar mi portfolio. Actualmente estoy en búsqueda de una pasantía o trabajo de medio tiempo (en lo posible) que pueda combinar con mis estudios. Cursé durante un año la carrera de Tech Developer en Digital House y luego decidí continuar mis estudios en la UTN. En abril de 2023 comenzaré a cursar la Tecnicatura en Programación.
             </p>
         </section>
         <section class="studies">
