--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
         </section>
         <section class="aboutMe">
             <h2> <a name="AboutMe"></a> Sobre mí</h2>
-            <p>¡Hola! Gracias por visitar mi portfolio. Actualmente estoy en búsqueda de una pasantía o trabajo de medio tiempo (en lo posible) que pueda combinar con mis estudios. Cursé durante un año la carrera de Tech Developer en Digital House y luego decidí continuar mis estudios en la UTN. En abril de 2023 comenzaré a cursar la Tecnicatura en Programación.
-            </p>
+            <p>¡Hola! Gracias por visitar mi portfolio. Actualmente estoy en la búsqueda de una pasantía o trabajo de medio tiempo (en lo posible) que pueda combinar con mis estudios. Por el momento estoy estudiando de manera full time, cerca de finalizar mis estudios en la institución Digital House y recién comenzando en la UTN (Universidad Tecnológica Nacional).</p>
         </section>
         <section class="studies">
             <h2> <a name="Studies"></a> Estudios</h2>
