--- a/index.html
+++ b/index.html
@@ -49,13 +49,18 @@
         </section>
         <section class="aboutMe">
             <h2> <a name="AboutMe"></a> Sobre mí</h2>
-            <p>¡Hola! Gracias por visitar mi portfolio. Actualmente estoy en la búsqueda de una pasantía o trabajo de medio tiempo (en lo posible) que pueda combinar con mis estudios. Por el momento estoy estudiando de manera full time, cerca de finalizar mis estudios en la institución Digital House y recién comenzando en la UTN (Universidad Tecnológica Nacional).</p>
+            <p>¡Hola! Gracias por visitar mi portfolio. Actualmente estoy en la búsqueda de una pasantía o trabajo de híbrido (en lo posible) que pueda combinar con mis estudios. Finalice en Abril mis estudios en la Digital House y continuo mis estudios en la UTN (Universidad Tecnológica Nacional) donde estoy cursando una Tecnicatura en Programación.</p>
         </section>
         <section class="studies">
             <h2> <a name="Studies"></a> Estudios</h2>
             <div class="studyCards">
+                <h6> <svg class="skillsIcons" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M41.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 41.4 86.6zM288 416H576c17.7 0 32 14.3 32 32s-14.3 32-32 32H288c-17.7 0-32-14.3-32-32s14.3-32 32-32z"/></svg> UTN </h6> 
+                <span> <strong> <i>Tecnicatura en Programación - </i>(inicio 02/23 - actualmente.</strong> </span>
+                <p>Carrera con una duración inicial de 2 años, más una posible extensión opcional de 1 año en Sistemas.</p>
+            </div>
+            <div class="studyCards">
                 <h6> <svg class="skillsIcons" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M41.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 41.4 86.6zM288 416H576c17.7 0 32 14.3 32 32s-14.3 32-32 32H288c-17.7 0-32-14.3-32-32s14.3-32 32-32z"/></svg> Digital House </h6> 
-                <span> <strong> <i>Certified Tech Developer - </i>(inicio 03/22 - actualmente).</strong> </span>
+                <span> <strong> <i>Certified Tech Developer - </i>(inicio 03/22 - 04/23).</strong> </span>
                 <p>Formación Java Full Stack Developer con adición de Metodologías Ágiles y Soft Skills. Lenguajes vistos: HTML, CSS, JavaScript, SQL, Java. Skills: Docker, Bash, Git, GitHub, principios de Testing, Unit Testing, Design Thinking, y varias habilidades más.</p>
             </div>
             <div class="studyCards">
