--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h2> <a name="Studies"></a> Estudios</h2>
             <div class="studyCards">
                 <h6> <svg class="skillsIcons" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M41.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 41.4 86.6zM288 416H576c17.7 0 32 14.3 32 32s-14.3 32-32 32H288c-17.7 0-32-14.3-32-32s14.3-32 32-32z"/></svg> UTN </h6> 
-                <span> <strong> <i>Tecnicatura en Programación - </i>(inicio 02/23 - actualmente.</strong> </span>
+                <span> <strong> <i>Tecnicatura en Programación - </i>(inicio 02/23 - actualmente).</strong> </span>
                 <p>Carrera con una duración inicial de 2 años, más una posible extensión opcional de 1 año en Sistemas.</p>
             </div>
             <div class="studyCards">
