--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         </section>
         <section class="aboutMe">
             <h2> <a name="AboutMe"></a> Sobre mí</h2>
-            <p>¡Hola! Gracias por visitar mi portfolio. Actualmente estoy en la búsqueda de una pasantía o trabajo de híbrido (en lo posible) que pueda combinar con mis estudios. Finalice en Abril mis estudios en la Digital House y continuo mis estudios en la UTN (Universidad Tecnológica Nacional) donde estoy cursando una Tecnicatura en Programación.</p>
+            <p>¡Hola! Gracias por visitar mi portfolio. Actualmente estoy cursando una Tecnicatura Superior en Programación en la UTN (turno tarde, 14-18 hs) y busco una oportunidad en el sector IT, ya sea como trainee en Análisis Funcional, Back-End, Project Management, Soporte Técnico o afines. Idealmente busco una posición con modalidad part-time para poder combinar con mis estudios y preferentemente en formato híbrido. Al iniciar el próximo cuatrimestre en Agosto de este año, posiblemente pase a cursar turno noche de 18 a 22 para tener más tiempo para un posible trabajo. 
+.</p>
         </section>
         <section class="studies">
             <h2> <a name="Studies"></a> Estudios</h2>
