--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </section>
         <section class="aboutMe">
             <h2> <a name="AboutMe"></a> Sobre mí</h2>
-            <p>¡Hola! Gracias por visitar mi portfolio. Actualmente estoy cursando una Tecnicatura Superior en Programación en la UTN (turno tarde, 14-18 hs) y busco una oportunidad en el sector IT, ya sea como trainee en Análisis Funcional, Back-End, Project Management, Soporte Técnico o afines. Idealmente busco una posición con modalidad part-time para poder combinar con mis estudios y preferentemente en formato híbrido. Al iniciar el próximo cuatrimestre en Agosto de este año, posiblemente pase a cursar turno noche de 18 a 22 para tener más tiempo para un posible trabajo. 
+            <p>¡Hola! Gracias por visitar mi portfolio. Actualmente cursando la Tecnicatura Superior en Programación en la UTN.
 .</p>
         </section>
         <section class="studies">
